[gd_scene load_steps=12 format=3 uid="uid://cygxcc2urgb44"]

[ext_resource type="Script" path="res://Scripts/Archives.gd" id="1_07ovb"]
[ext_resource type="Theme" uid="uid://dj4gh1nn7ignp" path="res://Themes/settingtheme.tres" id="2_2fmxd"]
[ext_resource type="Texture2D" uid="uid://370hm4ef0qux" path="res://Art/UI/loadingCircles.png" id="2_ykt0i"]
[ext_resource type="Script" path="res://Scripts/HTTPRequestSWAPI.gd" id="3_kg30p"]
[ext_resource type="FontFile" uid="uid://c6qhfk3phjwa5" path="res://Themes/Font/soloist1.ttf" id="3_y4rwi"]
[ext_resource type="Script" path="res://Scripts/HTTPRequestHome.gd" id="5_8dln3"]
[ext_resource type="AudioStream" uid="uid://dnhp1ilbgcmau" path="res://Audio/Background/02 - Glory, The Galactic Republic - Mark Griskey, Gordy Haab, Jesse Harlin, Lennie Moore & Wilbert Roget, II.mp3" id="6_8iq6n"]

[sub_resource type="Animation" id="Animation_23lep"]
resource_name = "Loading1"
length = 1.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_88ddm"]
resource_name = "Loading2"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LoadingSpritesheet:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(3.8, 3.8), Vector2(4, 4), Vector2(3.8, 3.8), Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_gqmif"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LoadingSpritesheet:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bo7hj"]
_data = {
"Loading1": SubResource("Animation_23lep"),
"Loading2": SubResource("Animation_88ddm"),
"RESET": SubResource("Animation_gqmif")
}

[node name="Archives" type="Node2D"]
script = ExtResource("1_07ovb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0666667, 0.0862745, 0.121569, 1)

[node name="LoadingSpritesheet" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 540)
scale = Vector2(4, 4)
texture = ExtResource("2_ykt0i")
hframes = 5
vframes = 3
frame = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 3.0
offset_right = 1921.0
offset_bottom = 1075.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_2fmxd")
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="header" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 125
text = "Archives
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="characterText" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="spacer" type="Label" parent="MarginContainer/VBoxContainer/characterText"]
layout_mode = 2
text = "           "

[node name="factionsymbol" type="TextureRect" parent="MarginContainer/VBoxContainer/characterText"]
layout_mode = 2
expand_mode = 3
stretch_mode = 3

[node name="characterinfotags" type="VBoxContainer" parent="MarginContainer/VBoxContainer/characterText"]
layout_mode = 2
size_flags_horizontal = 0

[node name="charname" type="Label" parent="MarginContainer/VBoxContainer/characterText/characterinfotags"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Character Name : "
horizontal_alignment = 2

[node name="charheight" type="Label" parent="MarginContainer/VBoxContainer/characterText/characterinfotags"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "HEigHT : "
horizontal_alignment = 2

[node name="charmass" type="Label" parent="MarginContainer/VBoxContainer/characterText/characterinfotags"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "MASS : "
horizontal_alignment = 2

[node name="chareye" type="Label" parent="MarginContainer/VBoxContainer/characterText/characterinfotags"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "EYE coloR : "
horizontal_alignment = 2

[node name="charbirth" type="Label" parent="MarginContainer/VBoxContainer/characterText/characterinfotags"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "BiRTHYEAR : "
horizontal_alignment = 2

[node name="charhome" type="Label" parent="MarginContainer/VBoxContainer/characterText/characterinfotags"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "HomE WoRlD : "
horizontal_alignment = 2

[node name="swapiinfobox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/characterText"]
layout_mode = 2
size_flags_horizontal = 3

[node name="swapiname" type="Label" parent="MarginContainer/VBoxContainer/characterText/swapiinfobox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_y4rwi")
theme_override_font_sizes/font_size = 54

[node name="swapiheight" type="Label" parent="MarginContainer/VBoxContainer/characterText/swapiinfobox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_y4rwi")
theme_override_font_sizes/font_size = 54

[node name="swapimass" type="Label" parent="MarginContainer/VBoxContainer/characterText/swapiinfobox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_y4rwi")
theme_override_font_sizes/font_size = 54

[node name="swapieye" type="Label" parent="MarginContainer/VBoxContainer/characterText/swapiinfobox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_y4rwi")
theme_override_font_sizes/font_size = 54

[node name="swapibirth" type="Label" parent="MarginContainer/VBoxContainer/characterText/swapiinfobox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_y4rwi")
theme_override_font_sizes/font_size = 54

[node name="swapihome" type="Label" parent="MarginContainer/VBoxContainer/characterText/swapiinfobox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_y4rwi")
theme_override_font_sizes/font_size = 54
vertical_alignment = 3

[node name="controlbuttonsbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="back" type="Button" parent="MarginContainer/VBoxContainer/controlbuttonsbox"]
layout_mode = 2
text = "back"

[node name="spacer" type="Label" parent="MarginContainer/VBoxContainer/controlbuttonsbox"]
layout_mode = 2
text = "                 "

[node name="exit" type="Button" parent="MarginContainer/VBoxContainer/controlbuttonsbox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = "exit"

[node name="spacer2" type="Label" parent="MarginContainer/VBoxContainer/controlbuttonsbox"]
layout_mode = 2
text = "                 "

[node name="next" type="Button" parent="MarginContainer/VBoxContainer/controlbuttonsbox"]
layout_mode = 2
text = "next"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true
script = ExtResource("3_kg30p")

[node name="HTTPRequestHome" type="HTTPRequest" parent="."]
script = ExtResource("5_8dln3")

[node name="backgroundmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8iq6n")
volume_db = -19.5
autoplay = true
bus = &"music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bo7hj")
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/controlbuttonsbox/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/controlbuttonsbox/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/controlbuttonsbox/next" to="." method="_on_next_pressed"]
